# TenetLLMAdapters

./: .gitattributes  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: ci.yml
.gitlab/: CODEOWNERS
.gitlab/issue_templates/: Bug_Report.md  Feature_Request.md  Task.md
.gitlab/merge_request_templates/: Default.md
docs/: INTEGRATION.md  OPERATIONS.md  README.md  architecture.md  configuration.md  gaps-and-drift.md  integration.md  module-operations-playbook.md  operations.md  providers.md  source-tree.md
src/tenet_llm_adapters/: __init__.py  _anthropic.py  _cohere.py  _gateway.py  _google.py  _openai.py  declaration.py  router.py
src/tenet_llm_adapters.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_anthropic.py  test_cohere.py  test_google.py  test_openai.py
